Closed Bug 797614 Opened 13 years ago Closed 13 years ago

Silence the warning about assignment in the condition in BasicTiledThebesLayer.cpp

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

Attachments

(1 file)

BasicTiledThebesLayer.cpp /Users/ehsanakhgari/moz/mozilla-central/gfx/layers/basic/BasicTiledThebesLayer.cpp:304:23: warning: using the result of an assignment as a condition without parentheses [-Wparentheses] while (lastRect = it.Next()) { ~~~~~~~~~^~~~~~~~~~~ /Users/ehsanakhgari/moz/mozilla-central/gfx/layers/basic/BasicTiledThebesLayer.cpp:304:23: note: place parentheses around the assignment to silence this warning while (lastRect = it.Next()) { ^ ( ) /Users/ehsanakhgari/moz/mozilla-central/gfx/layers/basic/BasicTiledThebesLayer.cpp:304:23: note: use '==' to turn this assignment into an equality comparison while (lastRect = it.Next()) { ^ ==
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #667715 - Flags: review?(jmuizelaar)
Attachment #667715 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: