Bug 797614 - Silence the warning about assignment in the condition in BasicTiledThebesLayer.cpp; r=jrmuizel